# apktrace

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  apktrace.py  notes.txt  pyproject.toml
AsciiRecords/: apktrace.cast
Documentation/: docu.md
JdwpHandler/: jdwp_handler.py
JdwpHandler/jdwp_client/: __init__.py  _class.py  _client.py  _events.py  _method.py  _protvars.py  _string.py  _thread.py  _utils.py  _vm.py
JdwpHandler/jdwp_client/Connection/: __init__.py  connection.py  packaging.py  utils.py
Utils/: apktools.py  clogger.py  definitions.py  utils.py
libLoadBreak/: gdbinit  load_lib_trace.py  simple.py  smaple.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/JdwpHandler/: jdwp_handler.rs
rust/src/JdwpHandler/JdwpClient/: classes.rs  events.rs  jdwp_client.rs  methods.rs  protocol_vars.rs  utils.rs
rust/src/JdwpHandler/JdwpClient/Connection/: connection.rs
rust/src/Utils/: apktools.rs
scripts/: analyze_trace.py
src/: main.rs
src/JdwpHandler/: jdwp_handler.rs
src/JdwpHandler/JdwpClient/: classes.rs  events.rs  jdwp_client.rs  methods.rs  protocol_vars.rs  tracer.rs  utils.rs
src/JdwpHandler/JdwpClient/Connection/: connection.rs
src/Utils/: apktools.rs
