[package]
name = "apktrace"
version = "1.0.0"
authors = ["niku <kurt.nistelberger@hotmail.com>"]
description = "Analyze apk's easy"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
chrono = "0.4.19"
argparse = "0.2.2"
